# multicurve

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md  daemon_setup.sh
include/api/: multiserver.h
src/api/: multiserver.cpp
src/core/: main.cpp
